<resources>
    <string name="app_name">GatoCubanoKitzia</string>
    <string name="tituloJ">Ingresen sus nombres</string>
    <string name="txtJ1">Jugador 1</string>
    <string name="txtJ2">Jugador 2</string>
    <string name="nombre">Ingrese el nombre</string>
    <string name="btnJ">JUGAR</string>

    <string name="tituloJuego">Gato++</string>
    <string name="jug1">Jugador 1</string>
    <string name="jug2">Jugador 2</string>
    <string name="btnReiniciar">Jugar de nuevo</string>
    <string name="btnVolver">Regresar</string>
</resources>