<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosa"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnR"
            android:layout_width="128dp"
            android:layout_height="58dp"
            android:layout_marginEnd="29dp"
            android:onClick="ReiniciarClick"
            android:text="@string/btnReiniciar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Volver"
            android:text="@string/btnVolver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnR"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="70dp"
            android:layout_height="53dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/jugador1" />

        <TextView
            android:id="@+id/textViewJ1"
            android:layout_width="127dp"
            android:layout_height="28dp"
            android:layout_marginStart="4dp"
            android:text="@string/jug1"
            android:textColor="@color/gris"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="188dp"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/textViewJ2"
            android:layout_width="115dp"
            android:layout_height="28dp"
            android:text="@string/jug2"
            android:textColor="@color/gris"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="53dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/jugador2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    tools:ignore=" ,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    tools:ignore=" ,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn10"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn11"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn12"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn13"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn14"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn15"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn16"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn17"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn18"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn19"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn20"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn21"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn22"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn23"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn24"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn25"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn26"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn27"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn28"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn29"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn30"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    android:textColor="@android:color/transparent"
                    app:rippleColor="@color/design_default_color_background"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn31"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn32"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn33"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn34"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn35"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn36"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:backgroundTint="@color/teal"
                    android:text=" "
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>
        </TableLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>